_sass/_dark-mode.scss
/* ... */
.bb8-toggle__checkbox:checked + .bb8-toggle__container .tatto-1 {
  top: 100%;
}

.bb8-toggle__checkbox:checked + .bb8-toggle__container .tatto-2 {
  top: 100%;
}

.bb8-toggle__checkbox:checked + .bb8-toggle__container .bb8 {
  left: calc(100% - var(--bb8-diameter) - var(--toggle-offset));
}

.bb8-toggle__checkbox:checked + .bb8-toggle__container .bb8__shadow {
  left: calc(100% - var(--bb8-diameter) - var(--toggle-offset) + 0.938em);
  -webkit-transform: skew(70deg);
  -ms-transform: skew(70deg);
  transform: skew(70deg);
}

.bb8-toggle__checkbox:checked + .bb8-toggle__container .bb8__body {
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(225deg);
}

.bb8-toggle__checkbox:hover + .bb8-toggle__container .bb8__head::before {
  left: 100%;
}

.bb8-toggle__checkbox:not(:checked):hover
  + .bb8-toggle__container
  .bb8__antenna:nth-child(1) {
  right: 1.5em;
}

.bb8-toggle__checkbox:hover
  + .bb8-toggle__container
  .bb8__antenna:nth-child(2) {
  left: 0.938em;
}

.bb8-toggle__checkbox:hover + .bb8-toggle__container .bb8__head::after {
  background-position: 1.375em 0;
}

.bb8-toggle__checkbox:checked:hover
  + .bb8-toggle__container
  .bb8__head::before {
  left: 0;
}

.bb8-toggle__checkbox:checked:hover
  + .bb8-toggle__container
  .bb8__antenna:nth-child(2) {
  left: calc(100% - 0.938em);
}

.bb8-toggle__checkbox:checked:hover + .bb8-toggle__container .bb8__head::after {
  background-position: -1.375em 0;
}

.bb8-toggle__checkbox:active + .bb8-toggle__container .bb8__head-container {
  -webkit-transform: rotate(25deg);
  -ms-transform: rotate(25deg);
  transform: rotate(25deg);
}

.bb8-toggle__checkbox:checked:active
  + .bb8-toggle__container
  .bb8__head-container {
  -webkit-transform: rotate(-25deg);
  -ms-transform: rotate(-25deg);
  transform: rotate(-25deg);
}

.bb8:hover .bb8__head::before,
.bb8:hover .bb8__antenna:nth-child(2) {
  left: 50% !important;
}

.bb8:hover .bb8__antenna:nth-child(1) {
  right: 0.938em !important;
}

.bb8:hover .bb8__head::after {
  background-position: 0 0 !important;
}

// Dark mode styles
body.dark-mode {
  background-color: #1a1a1a !important;
  color: #ffffff !important;
}

body.dark-mode .wrapper {
  background-color: #1a1a1a !important;
}

body.dark-mode .page-header {
  background-color: #2d2d2d !important;
}

body.dark-mode .header-name {
  color: #ffffff !important;
}

body.dark-mode .header-title {
  color: #cccccc !important;
}

body.dark-mode .header-contact-info {
  color: #cccccc !important;
}

body.dark-mode .executive-summary {
  color: #cccccc !important;
}

body.dark-mode .content-section {
  background-color: #2d2d2d !important;
}

body.dark-mode .section-header h2 {
  color: #ffffff !important;
}

body.dark-mode .resume-item-title {
  color: #ffffff !important;
}

body.dark-mode .resume-item-details {
  color: #cccccc !important;
}

body.dark-mode .resume-item-copy {
  color: #cccccc !important;
}

body.dark-mode .resume-item-list li {
  color: #cccccc !important;
}

body.dark-mode .contact-button {
  background-color: #de7d2f !important;
  color: #ffffff !important;
}

body.dark-mode .contact-button:hover {
  background-color: #c66a1f !important;
}

body.dark-mode .page-footer {
  color: #cccccc !important;
}

body.dark-mode .page-footer a {
  color: #de7d2f !important;
}

body.dark-mode .icon-links a {
  color: #cccccc !important;
}

body.dark-mode .icon-links a:hover {
  color: #de7d2f !important;
}

